Updated RocksDBMetadataManager.java and run_scalability_sweep.sh for 100M Scalability